[package]
name = "hwbp"
version = "0.1.1"
edition = "2021"
authors = ["Yurii Antoniuk <imunproductive@gmail.com>"]
license = "Unlicense"
description = "A fully-featured Rust library for managing hardware breakpoints on Windows via x86 debug registers."
homepage = "https://github.com/imunproductive/hwbp"
repository = "https://github.com/imunproductive/hwbp"
keywords = ["hardware", "breakpoint", "debug", "windows", "x86"]
categories = [
    "development-tools::debugging",
    "hardware-support",
    "os::windows-apis",
    "api-bindings",
    "memory-management",
]
readme = "README.md"

[dependencies]
bitfield-struct = "0.9.5"
lazy_static = "1.5.0"
thiserror = "2.0.11"
windows = { version = "0.59.0", features = [
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "std",
] }
